@@ -1,3 +1,12 @@
+2011-03-09  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: "length" getter is invoked upon console object formatting.
+        https://bugs.webkit.org/show_bug.cgi?id=55220
+
+        * inspector/InjectedScriptSource.js:
+
 2011-03-08  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Reviewed by Pavel Feldman.
