@@ -1,3 +1,14 @@
+2011-03-09  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: "length" getter is invoked upon console object formatting.
+        https://bugs.webkit.org/show_bug.cgi?id=55220
+
+        * inspector/console/console-format-expected.txt:
+        * inspector/console/console-format.html:
+        * platform/chromium/inspector/console/console-format-expected.txt:
+
 2011-03-09  Roland Steiner  <rolandsteiner@chromium.org>
 
         Unreviewed: yet more tweaking of the chromium test expectations.
